step 4, Mensaplan und backend deployment
